2004-12-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/text/DecimalFormat.java
	(format(long,StringBuffer,FieldPosition)): multiply
	number by multiplier before formatting.
	
2004-12-29  Michael Koch  <konqueror@gmx.de>

	* java/nio/DirectByteBufferImpl.java
	(owner): Reformatted javadoc.
	(ReadOnly): Reorganized keywords.
	(ReadWrite): Likewise.

2004-12-29  Michael Koch  <konqueror@gmx.de>

	* java/awt/Button.java,
	java/lang/Runtime.java,
	java/lang/System.java,
	java/security/cert/X509CRLSelector.java,
	java/security/cert/X509CertSelector.java,
	java/util/ResourceBundle.java,
	java/util/jar/JarFile.java,
	javax/swing/JApplet.java,
	javax/swing/JFormattedTextField.java,
	javax/swing/JTree.java,
	javax/swing/JWindow.java,
	javax/swing/TransferHandler.java,
	javax/swing/plaf/basic/BasicEditorPaneUI.java,
	javax/swing/plaf/basic/BasicTextPaneUI.java
	javax/swing/plaf/basic/BasicTreeUI.java:
	Imports reworked.

2004-12-28  Jeroen Frijters  <jeroen@frijters.net>

	* java/lang/Runtime.java
	(runShutdownHooks): Rewrote wait for shutdown hooks loop.

2004-12-28  Jeroen Frijters  <jeroen@frijters.net>

	* NEWS: Added entry about new method.
	* java/lang/Runtime.java
	(addShutdownHook): Added call to new method.
	* vm/reference/java/lang/VMRuntime.java
	(enableShutdownHooks): New method.

2004-12-27  Jeroen Frijters  <jeroen@frijters.net>

	* java/nio/ByteBufferImpl.java,
	java/nio/CharBufferImpl.java,
	java/nio/DirectByteBufferImpl.java,
	java/nio/DoubleBufferImpl.java,
	java/nio/FloatBufferImpl.java,
	java/nio/IntBufferImpl.java,
	java/nio/LongBufferImpl.java,
	java/nio/MappedByteBufferImpl.java,
	java/nio/ShortBufferImpl.java
	(compact): Added explicit read-only check and invalidate mark.

2004-12-27  Michael Koch  <konqueror@gmx.de>

	* javax/imageio/IIOParam.java
	(setSourceBands): New method.
	(setSourceSubsampling): Likewise.
	* javax/imageio/ImageReadParam.java
	(setDestination): Likewise.
	(setDestinationBands): Likewise.